--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="intro" class="intro">
 		<div class="slogan">
 			<h1>This is ZimWASAH</h1>
-			<p style="color:#006">If you cannot measure it, you cannot mange it</p>
+			<p style="color:#006">If you cannot measure it, you cannot manage it</p>
 			<a href="#about" class="btn btn-skin scroll">Learn more</a> &nbsp; 
             <a href="#download" class="btn btn-skin scroll">Download Wasah</a>
 		</div>	
